--- a/panels/pie/editor.html
+++ b/panels/pie/editor.html
@@ -26,7 +26,7 @@
       </div>
       <div class="span8">
         <form class="input-append" style="margin-bottom: 0px">
-          <label class="small">Exclude Terms(s) (comma seperated)</label>
+          <label class="small" style="font-size:12px !important">Exclude Terms(s) (comma seperated)</label>
           <input array-join type="text" style="width:90%"  ng-model='panel.exclude'></input>
           <button class="btn" ng-click="get_data()"><i class="icon-search"></i></button>
         </form>
@@ -35,10 +35,10 @@
   </div>
   <div ng-switch-when="goal">
     <div class="row-fluid">
-      <div class="span3">
+      <!--<div class="span3">
         <label class="small">Mode</label> 
         <select class="input-small" ng-change="set_mode(panel.mode)" ng-model="panel.mode" ng-options="f for f in ['terms','goal']"></select>
-      </div>   
+      </div>-->
       <div class="span2">
         <form style="margin-bottom: 0px">
           <label class="small">Goal</label>
