Updated help pages for Sort, Column and Text panels

--- a/help.html
+++ b/help.html
@@ -280,7 +280,11 @@
                         </div>
                         <div id="divContent_9" class="divHide">
                            <p>
-                              Allows sorting the results of the Table panel. The panel should be in the same group as the target Table panel.
+                               Allows sorting the results of the Table panel. The panel should be in the same group as the target Table panel. The screenshot below shows an example of
+                               the panel laid out with a fields and table panel.
+                           </p>
+                           <p>
+                               <img width="100%" height="550" src="common/img/help/sort.png"/>
                            </p>
                         </div>
                         <div id="divContent_10" class="divHide">
@@ -388,7 +392,28 @@
                         </div>
                         <div id="divContent_13" class="divHide">
                            <p>
-                              This panel allows adding child panels in a column layout.
+                               This panel allows adding child panels in a column layout.
+                           </p>
+                           <p>
+                               For example, you might want to set charts in a column format and then alongside the charts, display the actual data in a Table panel.
+                           </p>
+                           <p>
+                               The row of panels can be as,
+                           </p>
+                           <p>
+                               <img width="770" height="580" src="common/img/help/column1.png"/>
+                           </p>
+                           <p>
+                               The column panel in turn can have the following panels arranged one below another.
+                           </p>
+                           <p>
+                               <img width="768" height="574" src="common/img/help/column2.png"/>
+                           </p>
+                           <p>
+                               The final layout as shown by the above screenshots will look as follows,
+                           </p>
+                           <p>
+                               <img width="100%" height="371" src="common/img/help/column3.png"/>
                            </p>
                         </div>
                         <div id="divContent_14" class="divHide">
@@ -398,7 +423,14 @@
                         </div>
                         <div id="divContent_15" class="divHide">
                            <p>
-                              This panel allows adding text on the dashboards page. It supports markdown, html or plain text.
+                               This panel allows adding text on the dashboards page. It supports markdown, html or plain text. This can be helpful if you want to add pointers to the
+                               users of the system.
+                           </p>
+                           <p>
+                               For example, the screenshot below displays a text panel added above the query panel to direct the user on where he needs to enter the query.
+                           </p>
+                           <p>
+                               <img width="1174" height="131" src="common/img/help/text.png"/>
                            </p>
                         </div>
                         <div id="divContent_16" class="divHide">
