Updated pie and table panels to work for multiple rex script calls

--- a/help.html
+++ b/help.html
@@ -34,6 +34,7 @@
                      <div class="navbar-inner">
                         <div class="container-fluid">
                            <p class="navbar-text pull-right btn btn-success" onclick="loadKibana()"><strong>Take me back</strong></p>
+                           <p class="navbar-text pull-right"><small><strong>Kibana 3</strong> <small>milestone 2</small></small></p>
                            <span class="brand">Kibana Help</span>
                         </div>
                      </div>
